@@ -1,5 +1,6 @@
 2002-01-06  Sergei Barbarash  <sgt@livejournal.com>
 
+	* now makes net connections in a separate thread, with mutex locking
 	* added an initial check_friends()
 
 2002-01-06  Sergei Barbarash  <sgt@fep.ru>
